Remove language entity